project(kexin)


#####################################################################
#                       搜素
#####################################################################
add_executable(LeetCode200 search/LeetCode200.cpp)
add_executable(LeetCode200_2 search/LeetCode200_2.cpp)
add_executable(LeetCode127 search/LeetCode127.cpp)
add_executable(LeetCode126 search/LeetCode126.cpp)
add_executable(LeetCode473 search/LeetCode473.cpp)
add_executable(LeetCode078 search/LeetCode078.cpp)
add_executable(LeetCode079 search/LeetCode079.cpp)


#####################################################################
#                       动态规划
#####################################################################
add_executable(LeetCode070 dp/LeetCode070.cpp)


#####################################################################
#                       哈希表与字符串
#####################################################################
add_executable(LeetCode409 string/LeetCode409.cpp)
add_executable(LeetCode003 string/LeetCode003.cpp)
add_executable(LeetCode187 string/LeetCode187.cpp)
add_executable(LeetCode076 string/LeetCode076.cpp)


#####################################################################
#                        二叉树和图
#####################################################################
add_executable(LeetCode113 treemap/LeetCode113.cpp)


#####################################################################
#                       模拟测试
#####################################################################
add_executable(Tlv exam/Tlv.cpp)





