project(kexin)


#####################################################################
#                       搜素
#####################################################################
add_executable(LeetCode200 search/LeetCode200.cpp)
add_executable(LeetCode200_2 search/LeetCode200_2.cpp)
add_executable(LeetCode127 search/LeetCode127.cpp)
add_executable(LeetCode126 search/LeetCode126.cpp)
add_executable(LeetCode473 search/LeetCode473.cpp)
add_executable(LeetCode078 search/LeetCode078.cpp)
add_executable(LeetCode079 search/LeetCode079.cpp)


#####################################################################
#                       动态规划
#####################################################################
add_executable(LeetCode070 dp/LeetCode070.cpp)


#####################################################################
#                       哈希表与字符串
#####################################################################
add_executable(LeetCode003 string/LeetCode003.cpp)
add_executable(LeetCode187 string/LeetCode187.cpp)
add_executable(LeetCode076 string/LeetCode076.cpp)


#####################################################################
#                        二叉树和图
#####################################################################
add_executable(LeetCode113 treemap/LeetCode113.cpp)
add_executable(LeetCode236 treemap/LeetCode236.cpp)
add_executable(LeetCode114 treemap/LeetCode114.cpp)
add_executable(LeetCode114_2 treemap/LeetCode114_2.cpp)
add_executable(LeetCode199 treemap/LeetCode199.cpp)


#####################################################################
#                        二分查找和二叉查找树
#####################################################################
add_executable(Binaryearch bintree/BinarySearch.cpp)
add_executable(BinTree bintree/BinTree.cpp)
add_executable(LeetCode035 bintree/LeetCode035.cpp)
add_executable(LeetCode034 bintree/LeetCode034.cpp)
add_executable(LeetCode033 bintree/LeetCode033.cpp)
add_executable(LeetCode449 bintree/LeetCode449.cpp)
add_executable(LeetCode315 bintree/LeetCode315.cpp)


#####################################################################
#                       模拟测试
#####################################################################
add_executable(Tlv exam/Tlv.cpp)
add_executable(work1227_1 exam/work1227_1.cpp)





