project(kexin)


#####################################################################
#                       搜素
#####################################################################
add_executable(LeetCode200 search/LeetCode200.cpp)
add_executable(LeetCode200_2 search/LeetCode200_2.cpp)
add_executable(LeetCode127 search/LeetCode127.cpp)
add_executable(LeetCode126 search/LeetCode126.cpp)
add_executable(LeetCode473 search/LeetCode473.cpp)


#####################################################################
#                       贪心算法
#####################################################################
add_executable(PayMoney greedyAlgorithm/PayMoney.cpp)
add_executable(LeetCode455 greedyAlgorithm/LeetCode455.cpp)
add_executable(LeetCode376 greedyAlgorithm/LeetCode376.cpp)
add_executable(LeetCode402 greedyAlgorithm/LeetCode402.cpp)


#####################################################################
#                       动态规划
#####################################################################
add_executable(LeetCode070 dp/LeetCode070.cpp)
add_executable(LeetCode198 dp/LeetCode198.cpp)
add_executable(LeetCode053 dp/LeetCode053.cpp)
add_executable(LeetCode322 dp/LeetCode322.cpp)
add_executable(LeetCode322_2 dp/LeetCode322_2.cpp)
add_executable(LeetCode120 dp/LeetCode120.cpp)
add_executable(LeetCode120_2 dp/LeetCode120_2.cpp)
add_executable(LeetCode300 dp/LeetCode300.cpp)
add_executable(LeetCode064 dp/LeetCode064.cpp)


#####################################################################
#                       高级数据结构
#####################################################################
add_executable(TrieNode complexDataStruct/TrieNode.cpp)
add_executable(TrieTree complexDataStruct/TrieTree.cpp)
add_executable(UF complexDataStruct/UnionFind.cpp)
add_executable(SegmentTree complexDataStruct/SegmentTree.cpp)
add_executable(LeetCode307 complexDataStruct/LeetCode307.cpp)


#####################################################################
#                       哈希表与字符串
#####################################################################
add_executable(LeetCode003 string/LeetCode003.cpp)
add_executable(LeetCode187 string/LeetCode187.cpp)
add_executable(LeetCode076 string/LeetCode076.cpp)
add_executable(LeetCode640 string/LeetCode640.cpp)



#####################################################################
#                        二叉树和图
#####################################################################
add_executable(TreeDfs treemap/TreeDfs.cpp)
add_executable(LeetCode113 treemap/LeetCode113.cpp)
add_executable(LeetCode236 treemap/LeetCode236.cpp)
add_executable(LeetCode114 treemap/LeetCode114.cpp)
add_executable(LeetCode114_2 treemap/LeetCode114_2.cpp)
add_executable(LeetCode199 treemap/LeetCode199.cpp)


#####################################################################
#                        二分查找和二叉查找树
#####################################################################
add_executable(Binaryearch bintree/BinarySearch.cpp)
add_executable(BinTree bintree/BinTree.cpp)
add_executable(LeetCode035 bintree/LeetCode035.cpp)
add_executable(LeetCode034 bintree/LeetCode034.cpp)
add_executable(LeetCode449 bintree/LeetCode449.cpp)
add_executable(LeetCode315 bintree/LeetCode315.cpp)


#####################################################################
#                        递归回溯归并
#####################################################################
add_executable(LeetCode078 backtrackingMerge/LeetCode078.cpp)


#####################################################################
#                       模拟测试
#####################################################################
add_executable(Tlv exam/Tlv.cpp)
add_executable(work1227_1 exam/work1227_1.cpp)
add_executable(work1227_2 exam/work1227_2.cpp)
add_executable(work1227_3 exam/work1227_3.cpp)
add_executable(work0320_1_LeetCode1122 exam/work0320_1_LeetCode1122.cpp)
add_executable(work0320_2_LeetCode604 exam/work0320_2_LeetCode604.cpp)
add_executable(work0926_1 exam/work0926_1_LeetCode1086.cpp)
add_executable(work0926_2 exam/work0926_2_LeetCode751.cpp)
add_executable(work1220_1 exam/work1220_1.cpp)
add_executable(work1220_2 exam/work1220_2.cpp)
add_executable(work1220_3 exam/work1220_3.cpp)
add_executable(expert0515_2 exam/expert0515_2_LeetCode1055.cpp)
add_executable(expert0515_3 exam/expert0515_3_LeetCode085.cpp)





